--- a/.github/workflows/gretting.yaml
+++ b/.github/workflows/gretting.yaml
@@ -1,8 +1,8 @@
 name: Greeting
 on: push
-jobs: 
+jobs:
     greet:
         runs-on: ubuntu-latest
         steps:
-        -name: "greet user"
-        run: echo "Hellow WORLD"
+            - name: "greet user"
+              run: echo "Hellow WORLD!"
