--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -7,5 +7,5 @@ jobs:
       - name: "Get code"
         run: |
           echo "clonning app"
-          echo "${{ toJSON(github) }}""
-          git clone "https://github.com/${{github.repository}}.git"
+          echo "${{ toJSON(github) }}"
+          git clone https://github.com/${{github.repository}}.git
